# detective-query-service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  tests.yml
connectors/: testfile.py
connectors/general/: connection.py
connectors/sql/: mysql.py
mysql/: docker-compose.yml  dockerfile
mysql/conf.d/: my.cnf
mysql/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/data/mysql/: general_log_213.sdi  slow_log_214.sdi
mysql/data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+70 more)
mysql/data/sys/: sys_config.ibd
src/detective_query_service/: app.py  datarequest.py  log_definition.py  settings.py  testfile.py  views.py
src/detective_query_service/connectors/: testfile.py
src/detective_query_service/connectors/general/: connection.py  factory.py
src/detective_query_service/connectors/mongodb/: mongodb_connector.py
src/detective_query_service/connectors/sql/: my_sql.py  sql_connector.py
src/detective_query_service/database/: databases.py  execution.py
src/detective_query_service/events/: event_type.py
src/detective_query_service/graphql/: databases.py  execution.py
src/detective_query_service/pydataobject/: .gitignore  dgraph_type.py  event_type.py  transformer.py
src/detective_query_service/service/: consumer.py  event.py  operations.py  producer.py
src/detective_query_service/service/listeners/: kafka_listener.py  log_listener.py  query_listener.py  registration.py
src/detective_query_service/tests/: conftest.py  test_mysql.py
src/detective_query_service/transformers/: query.py  response.py  tuples.py
src/detective_query_service/utils/: query.py  response.py  tuples.py
tests/: conftest.py  test_mysql.py  test_nosql.py  test_sql.py  test_transformers.py  test_utils.py  test_views.py
tests/test_data/: mysql.sql
trino/: docker-compose.yaml
trino/trino-base/: Dockerfile
trino/trino-base/scripts/: render.py  trino.sh
trino/trino-coordinator/: Dockerfile
trino/trino-coordinator/etc/: exchange-manager.properties  node.properties
trino/trino-worker/: Dockerfile
trino/trino-worker/etc/: node.properties
