[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=detective_query_service"
testpahts = [
    "tests",
]

[tool.mypy]
mypy_path = "src/detective_query_service"
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = false
show_error_codes = true
strict_equality = true
allow_redefinition = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs =true
no_implicit_reexport = true