[metadata]
name = detective-query-service
description = detective mircoservice api in flask, holding and executing database queries of all types
author = detective.solutions
platforms = unix, linux, osx, cygewin win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    flask==2.0.2
    SQLAlchemy==1.4.28
    Flask-MySQLdb==0.2.0
    psycopg2==2.9.3
    cx-Oracle==8.3.0
    flask_restful==0.3.9
    pydgraph==21.3.2
    pyodbc==4.0.32
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
detective_query_service = py.typed

[flake8]
max-line-length = 160