[metadata]
name = query-service
version = 1.0.0-beta
author = detective.solutions GmbH
platforms = unix, linux, osx, cygewin win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    protobuf==3.20.*
    pydgraph==21.3.2
    dnspython==2.2.0
    kafka-python==2.0.2
    python-dotenv==0.20.0
    trino==0.313.0
    pydantic==1.9.1
    pandas==1.4.2
    python-dotenv==0.20.0
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910
    types-requests==2.27.7
    sqlalchemy-utils==0.38.2

[options.package_data]
detective_query_service = py.typed

[flake8]
max-line-length = 160
